Phase-5/k8s/base/configmaps-secrets.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: todo-app
